Added some styling to css file

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Attack</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <header class="header">
         <h1>Cat Attack</h1>
     </header>
-<main>
+<main class="flex-container">
     <div class="textbox">
 <p>this is a textbox</p>
     </div>
@@ -22,7 +23,7 @@
         <button>Click me</button>
     </div>
 </main>
-<aside>
+<aside class="flex-container-2">
     <img src="" alt="placeholder image">
 </aside>
     <footer>
