card actually looks ok now

--- a/index.html
+++ b/index.html
@@ -12,23 +12,30 @@
     <header class="header">
         <h1>Cat Attack</h1>
     </header>
-        <div class="card">
-            <header class="card-header">
-              <p class="card-header-title">Username Placeholder</p>
-              <button class="card-header-icon" aria-label="more options">
-                <span class="icon">
-                  <i class="fas fa-angle-down" aria-hidden="true"></i>
-                </span>
-              </button>
-            </header>
-            <div class="card-content">
-                <img src="https://pbs.twimg.com/media/FOzquG2X0AQuSG0?format=jpg&name=medium">
-              <div class="content">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-              </div>
-            </div>
+    <div class="column is-centered">
+        <div class="column is-half">
+            <div class="card">
+                <header class="card-header">
+                    <p class="card-header-title">Username Placeholder</p>
+                    <button class="card-header-icon" aria-label="more options">
+                    <span class="icon">
+                        <i class="fas fa-angle-down" aria-hidden="true"></i>
+                    </span>
+                      </button>
+                </header>
+                <div class="card-content">
+                    <img src="https://pbs.twimg.com/media/FOzquG2X0AQuSG0?format=jpg&name=medium">
+                    <div class="content">
+                        Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec
+                        id elit non mi porta gravida at eget metus. Cum sociis natoque penatibus
+                        et magnis dis parturient montes, nascetur ridiculus mus. Cras mattis
+                        consectetur purus sit amet fermentum.
+                    </div>
+                    <button class="button">Button</button>
+                </div>
+            </div>  
         </div>
-
+    </div>
     <footer>
         <p>Tiny game developed by:</p>
         <ul>
