--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="theme-light" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,16 +12,11 @@
     <header class="header">
         <h1>Cat Attack</h1>
     </header>
-    <div class="column is-centered">
+    <div class="columns is-centered">
         <div class="column is-half">
             <div class="card">
                 <header class="card-header">
                     <p class="card-header-title">Username Placeholder</p>
-                    <button class="card-header-icon" aria-label="more options">
-                    <span class="icon">
-                        <i class="fas fa-angle-down" aria-hidden="true"></i>
-                    </span>
-                      </button>
                 </header>
                 <div class="card-content">
                     <img src="https://pbs.twimg.com/media/FOzquG2X0AQuSG0?format=jpg&name=medium">
@@ -32,10 +27,12 @@
                         consectetur purus sit amet fermentum.
                     </div>
                     <button class="button">Button</button>
+                    <button class="button">Button</button>
                 </div>
             </div>  
         </div>
     </div>
+    <button class="button" id="modalButton">Button</button>
     <footer>
         <p>Tiny game developed by:</p>
         <ul>
