--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                 </header>
                 <div class="card-content">
                     <img src="https://pbs.twimg.com/media/FOzquG2X0AQuSG0?format=jpg&name=medium">
-                    <div class="content">
+                    <div id="changeText" class="content">
                         Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec
                         id elit non mi porta gravida at eget metus. Cum sociis natoque penatibus
                         et magnis dis parturient montes, nascetur ridiculus mus. Cras mattis
                         consectetur purus sit amet fermentum.
                     </div>
-                    <button class="button">Button</button>
-                    <button class="button">Button</button>
+                    <button id="click1"  class="button">Button</button>
+                    <button id="click2" class="button">Button</button>
                 </div>
             </div>  
         </div>
