fixed the footer

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <div class="modalButton">
         <button class="button">How was the luck today?</button>
     </div>
-    <footer>
+    <footer class="footer">
         <p>Tiny game developed by:</p>
         <ul>
             <li> <a href="https://github.com/Choledad">Sol</a></li> 
-            <li> <a href="https://github.com/steakbutter">Karen</a></li> 
+            <li> <a href="https://github.com/Kahlium">Karen</a></li> 
             <li> <a href="https://github.com/steakbutter">Carlos</a></li> 
         </ul>
     </footer>
