fetched random cat image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </header>
                 <div class="card-content">
                     <div class="centerImage">
-                        <img class="catPics" src="https://pbs.twimg.com/media/FOzquG2X0AQuSG0?format=jpg&name=medium">
+                        <img id="kitten" class="catPics" src="https://pbs.twimg.com/media/FOzquG2X0AQuSG0?format=jpg&name=medium">
                     </div>
                     <div id="changeText" class="content">
                         Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec
@@ -37,6 +37,7 @@
     <div class="modalButton">
         <button class="button">How was the luck today?</button>
     </div>
+    
     <footer class="footer">
         <p>Tiny game developed by:</p>
         <ul>
