button has been moved

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <header class="header">
         <h1>Cat Quest</h1>
     </header>
+    <div class="modalButton">
+        <button class="button button is-large is-primary">Please press this button first :3</button>
+    </div>
     <div class="columns is-centered">
         <div class="column is-half">
             <div class="card">
@@ -20,7 +23,7 @@
                 </header>
                 <div class="card-content">
                     <div class="centerImage">
-                        <img id="kitten" class="catPics" src="https://pbs.twimg.com/media/FOzquG2X0AQuSG0?format=jpg&name=medium">
+                        <img id="kitten" class="catPics">
                     </div>
                     <div id="changeText" class="content">
                         Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec
@@ -33,9 +36,6 @@
                 </div>
             </div>  
         </div>
-    </div>
-    <div class="modalButton">
-        <button class="button">How was the luck today?</button>
     </div>
     
     <footer class="footer">
