life exists, gotta center it

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
             <div class="card">
                 <header class="card-header">
                     <p class="card-header-title">Username Placeholder</p>
+                    <p class="lifeCounter">Life = 100</p>
                 </header>
                 <div class="card-content">
                     <div class="centerImage">
-                        <img id="kitten" class="catPics">
+                        <img id="kitten" class="catPics" src="assets\IMG_0977.jpg">
                     </div>
                     <div id="changeText" class="content">
                         Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec
