added modal first part

--- a/index.html
+++ b/index.html
@@ -13,8 +13,26 @@
         <h1>Cat Quest</h1>
     </header>
     <div class="modalButton">
-        <button class="button button is-large is-primary">Please press this button first :3</button>
+        <button id="modalThing" class="button modal-button is-large is-primary">Please press this button first :3</button>
     </div>
+    <div class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+          <header class="modal-card-head">
+            <p class="modal-card-title">Modal title</p>
+            <button class="delete" aria-label="close"></button>
+          </header>
+          <section class="modal-card-body">
+            modal
+          </section>
+          <footer class="modal-card-foot">
+            <div class="buttons">
+              <button class="button is-success">Save changes</button>
+              <button class="button">Cancel</button>
+            </div>
+          </footer>
+        </div>
+      </div>
     <div class="columns is-centered">
         <div class="column is-half">
             <div class="card">
@@ -37,7 +55,7 @@
             </div>  
         </div>
     </div>
-    
+ 
     <footer class="footer">
         <p>Tiny game developed by:</p>
         <ul>
