--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                     <div class="centerImage">
                         <img id="kitten" class="catPics" src="assets\IMG_0977.jpg">
                     </div>
-                    <div id="changeText" class="content">
+                    <p id="changeText" class="content">
                         Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec
                         id elit non mi porta gravida at eget metus. Cum sociis natoque penatibus
                         et magnis dis parturient montes, nascetur ridiculus mus. Cras mattis
                         consectetur purus sit amet fermentum.
-                    </div>
+                    </p>
                     <button id="click1"  class="button">Button</button>
                     <button id="click2" class="button">Button</button>
                 </div>
