setting local storage username

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
-                <input class="input is-large" type="text" placeholder="Type your username (think of a fun one)" />
+                <input id="username" class="input is-large" type="text" placeholder="Type your username (think of a fun one)" />
             </section>
             <footer class="modal-card-foot">
                 <div class="buttons">
-                    <button class="button is-success">Save changes</button>
+                    <button id="submit" class="button is-success">Save changes</button>
                     <button class="button">Cancel</button>
                 </div>
             </footer>
