Added a story and text to buttons

--- a/index.html
+++ b/index.html
@@ -53,13 +53,11 @@
                         <img id="kitten" class="catPics" src="assets\IMG_0977.jpg">
                     </div>
                     <p id="changeText" class="content">
-                        Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec
-                        id elit non mi porta gravida at eget metus. Cum sociis natoque penatibus
-                        et magnis dis parturient montes, nascetur ridiculus mus. Cras mattis
-                        consectetur purus sit amet fermentum.
+                        Welcome (username) to Mexicat city. We have been invaded by diabolical stray cats trying to take over the city. With your help we can take the city back and get rid of all cats.
+
                     </p>
-                    <button id="click1" class="button">Button</button>
-                    <button id="click2" class="button">Button</button>
+                    <button id="click1" class="button">Fight</button>
+                    <button id="click2" class="button">Flight</button>
                 </div>
             </div>
         </div>
