username in paragraph replaces every time a new username is inputted

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="column is-half">
             <div class="card">
                 <header class="card-header">
-                    <p class="card-header-title">Username Placeholder</p>
+                    <p class="card-header-title">Username</p>
                     <p class="lifeCounter">Life = 100</p>
                 </header>
                 <div class="card-content">
@@ -53,8 +53,8 @@
                         <img id="kitten" class="catPics" src="assets\IMG_0977.jpg">
                     </div>
                     <p id="changeText" class="content">
-                        Welcome (username) to Mexicat city. We have been invaded by diabolical stray cats trying to take over the city. With your help we can take the city back and get rid of all cats.
-
+                        Welcome username to Mexicat city. We have been invaded by diabolical stray cats trying to take
+                        over the city. With your help we can take the city back and get rid of all cats.
                     </p>
                     <button id="click1" class="button">Fight</button>
                     <button id="click2" class="button">Flight</button>
