Added function to reduce health, but something is missing

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <div class="card">
                 <header class="card-header">
                     <p class="card-header-title">Username</p>
-                    <p class="lifeCounter">Life = 100</p>
+                    <p class="healthText">Health</p>
+                    <p class="lifeCounter">100</p>
                 </header>
                 <div class="card-content">
                     <div class="centerImage">
