added homepage image again

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </header>
                 <div class="card-content">
                     <div class="centerImage">
-                        <img id="kitten" class="catPics" src="assets\IMG_0977.jpg">
+                        <img id="kitten" class="catPics" src="assets/images/IMG_0977.jpg">
                     </div>
                     <p id="changeText" class="content">
                         Welcome username to Mexicat city. We have been invaded by diabolical stray cats trying to take
